--- a/index.html
+++ b/index.html
@@ -4,6 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+
+  <body>
+    <header class="header">
+      <h1>My Website</h1>
+      <nav class="navlinks">
+        <a href="#top">Home</a>
+        <a href="#section1">Section 1</a>
+        <a href="#section2">Section 2</a>
+        <a href="#section3">Section 3</a>
+      </nav>
+    </header>
+    <div class="mainclass">
+      <section id="section1">
+        <h1>h1</h1>
+      </section>
+      <section id="section2">
+        <h1>h1</h1>
+      </section>
+      <section id="section3">
+        <h1>h1</h1>
+      </section>
+    </div>
+    <footer>Copywrite Megabass Corp ©</footer>
+  </body>
 </html>
