Added responsive images and renamed + adjusted section links

--- a/index.html
+++ b/index.html
@@ -3,29 +3,45 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Digital Audio Creation</title>
     <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <header class="header">
-      <h1>My Website</h1>
+      <h1>Making digital music</h1>
       <nav class="navlinks">
         <a href="#top">Home</a>
-        <a href="#section1">Section 1</a>
-        <a href="#section2">Section 2</a>
-        <a href="#section3">Section 3</a>
+        <a href="#Computers">Computers</a>
+        <a href="#Audio-Interfaces">Audio Interface</a>
+        <a href="#Software">Software</a>
       </nav>
     </header>
     <div class="mainclass">
-      <section id="section1">
-        <h1>h1</h1>
+      <section id="Computers">
+        <img
+          src="/Images/computer.jpg"
+          alt="a picture of a computer"
+          class="responsive"
+        />
+
+        <h1>Computers</h1>
       </section>
-      <section id="section2">
-        <h1>h1</h1>
+      <section id="Audio-Interfaces">
+        <img
+          src="Images/soundcard.jpg"
+          alt="An audio interface picture"
+          class="responsive"
+        />
+        <h1>Audio Interfaces</h1>
       </section>
-      <section id="section3">
-        <h1>h1</h1>
+      <img
+        src="/Images/music-software.png"
+        alt="A picture of some music software"
+        class="responsive"
+      />
+      <section id="Software">
+        <h1>Software</h1>
       </section>
     </div>
     <footer>Copywrite Megabass Corp ©</footer>
