--- a/index.html
+++ b/index.html
@@ -8,48 +8,46 @@
   </head>
 
   <body>
-    <header class="header">
+    <header>
       <h1>Making Digital Music</h1>
       <nav>
         <div class="navlinks">
           <ul>
             <a href="#top">Home</a>
             <a href="#Computers">Computers</a>
-            <a href="#Audio-Interfaces">Audio Interface</a>
+            <a href="#Audiointerfaces">Audio Interface</a>
             <a href="#Software">Software</a>
           </ul>
         </div>
       </nav>
     </header>
 
-    <div class="maindiv">
-      <main class="main">
-        <section class="section">
-          <img src="/Images/computer.png" alt="a picture of a computer" />
+    <main>
+      <section id="Computers">
+        <img src="/Images/computer.png" alt="a picture of a computer" />
+        <h1>Computers</h1>
+        <h2>Making music with computers.</h2>
+        <button class="button">Computers</button>
+      </section>
 
-          <h1>Computers</h1>
-          <h2>Making music with computers.</h2>
-          <button class="button">Computers</button>
-        </section>
+      <section id="#Audiointerfaces">
+        <img src="Images/soundcard.png" alt="An audio interface picture" />
+        <h1>Audio Interfaces</h1>
+        <h2>What audio interface should I use.</h2>
+        <button class="button">Audio Interfaces</button>
+      </section>
 
-        <section class="section">
-          <img src="Images/soundcard.png" alt="An audio interface picture" />
-          <h1>Audio Interfaces</h1>
-          <h2>What audio interface should I use.</h2>
-          <button class="button">Audio Interfaces</button>
-        </section>
+      <section id="Software">
+        <img
+          src="Images/music-software.png"
+          alt="A picture of some music software"
+        />
+        <h1>Software</h1>
+        <h2>Which software will I need.</h2>
+        <button class="button">Music Software</button>
+      </section>
+    </main>
 
-        <section class="section">
-          <img
-            src="Images/music-software.png"
-            alt="A picture of some music software"
-          />
-          <h1>Software</h1>
-          <h2>Which software will I need.</h2>
-          <button class="button">Music Software</button>
-        </section>
-      </main>
-    </div>
     <footer>Copywrite Megabass Corp ©</footer>
   </body>
 </html>
