Final upload, unleashed background music, added bold to page top button

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
       </div>
     </footer>
     <div id="music">
-      <!-- <audio controls autoplay src="/Music/Muddy Waters.m4a">
+      <audio controls autoplay src="/Music/Muddy Waters.m4a">
         Your browser does not support the audio element.
-      </audio> -->
+      </audio>
     </div>
   </body>
 </html>
